--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.64.0",
     "@react-three/fiber": "^8.12.0",
+    "@vercel/analytics": "^1.1.1",
     "caniuse-lite": "^1.0.30001551",
     "framer-motion": "^9.1.7",
     "maath": "^0.5.3",
