--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emailjs/browser": "^3.11.0",
     "@react-three/drei": "^9.64.0",
     "@react-three/fiber": "^8.12.0",
+    "@splinetool/react-spline": "^2.2.6",
+    "@splinetool/runtime": "^0.9.492",
     "@vercel/analytics": "^1.1.1",
     "caniuse-lite": "^1.0.30001551",
     "framer-motion": "^9.1.7",
