--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^9.1.7",
     "maath": "^0.5.3",
     "react": "^18.2.0",
+    "react-chat-widget": "^3.1.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-tilt": "^0.1.4",
