--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@splinetool/runtime": "^0.9.492",
     "@vercel/analytics": "^1.1.1",
     "caniuse-lite": "^1.0.30001551",
+    "clsx": "^2.1.1",
     "framer-motion": "^9.1.7",
+    "lucide-react": "^0.427.0",
     "maath": "^0.5.3",
-    "react": "^18.2.0",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
     "react-chat-widget": "^3.1.4",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.10.0",
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.6.0",
