--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.149.0"
   },
+  "engines": {
+    "node": "24.x"
+  },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
