--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -18,6 +18,8 @@
     "caniuse-lite": "^1.0.30001551",
     "clsx": "^2.1.1",
     "framer-motion": "^9.1.7",
+    "lottie": "^0.0.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.427.0",
     "maath": "^0.5.3",
     "next": "^14.2.5",
