--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,6 +17,16 @@
       "src": "/src/assets/logo.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
+    },
+    {
+      "src": "/logo-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/logo-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ]
 }
