--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^6.10.0",
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.149.0"
+    "three": "^0.149.0",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "engines": {
     "node": "24.x"
