--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "3dfolio",
+  "name": "Visione Rifatta",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.4.28",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@react-three/drei": "^9.64.0",
     "@react-three/fiber": "^8.12.0",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^0.9.492",
+    "@supabase/supabase-js": "^2.86.0",
     "@vercel/analytics": "^1.1.1",
     "caniuse-lite": "^1.0.30001551",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^9.1.7",
     "lottie": "^0.0.1",
     "lottie-react": "^2.4.1",
-    "lucide-react": "^0.427.0",
+    "lucide-react": "^0.555.0",
     "maath": "^0.5.3",
     "next": "^14.2.5",
     "react": "^18.3.1",
@@ -29,6 +33,7 @@
     "react-router-dom": "^6.10.0",
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.6.0",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.149.0",
     "vite-plugin-pwa": "^1.2.0"
   },
