--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^9.1.7",
+    "gsap": "^3.13.0",
     "lottie": "^0.0.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.555.0",
